original/tests%20231224161151/compiler_output/CompilerOutput-FilterByPrefix_53_1Test.java.txt
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/FilterByPrefix_53_1Test.java:2: error: class, interface, or enum expected
package test;
^
1 error
